# notes3

./: .env  .gitignore  404.html  AGENTS.md  CLAUDE.md  README.md  blog.html  docusaurus.config.ts  global-git-commit-instructions.md  index.html  markdown-page.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  remotion.config.ts  search.html  sidebars.ts  sitemap.xml
.serena/: project.yml
.zencoder/rules/: repo.md
assets/css/: styles.048dad46.css  styles.078970d1.css  styles.212898f5.css  styles.2368fac6.css  styles.371c6534.css  styles.44875995.css  styles.48a6e6d2.css  styles.51e7f887.css  styles.5589a8a1.css  styles.6005311d.css  styles.6f52c8a6.css  styles.751d8bac.css  styles.8158c1da.css  styles.8299d33b.css  styles.8c4657fb.css  styles.a9a88ea5.css  styles.ab5ec95e.css  styles.c1f34022.css  styles.c5394318.css  styles.da241bce.css  styles.e0961402.css  styles.f2ae9de8.css  styles.f3dc2d00.css  styles.f46a1971.css  styles.f916e08e.css
assets/js/: 000e3cd8.8ff193b2.js  000e3cd8.b89f8fc8.js  000e3cd8.cd47dcf3.js  000e3cd8.d382a654.js  003f09db.2a7021d9.js  003f09db.3fd63117.js  003f09db.f2d16429.js  0058b4c6.7eb6a8b3.js  00728a8a.12aff965.js  00728a8a.22c36e12.js  00728a8a.85e45134.js  (+8270 more)
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  index.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
docs/: Rightbot_AI_Document.docx  gpu_intro.html  gpu_intro.md  tags.html
markdown-page/: index.html
scripts/: sync-demo.mjs
子君AI销售系统需求演示/: .gitignore  package.json  pnpm-lock.yaml
(+3114 files in other folders)
